Fix vertical map menu on mobile (landscape)

--- a/src/assets/sass/_search_popups.scss
+++ b/src/assets/sass/_search_popups.scss
@@ -780,9 +780,26 @@
   }
   .tools-wrap {
     width: 80%;
-    //height: 100%;
     .tools-hint-block {
       border-radius: 10px;
+      h2, p {
+        font: 500 16px/22px 'Questrial';
+      }
+      h2 {
+        margin: 6px 0 5px;
+      }
+      ul {
+        margin: 0;
+        li {
+          width: 40px;
+          height: 40px;
+          margin: 10px 15px 15px;
+          font-size: 12px;
+          img {
+            max-width: 100%;
+          }
+        }
+      }
     }
   }
   .weather-wrap {
@@ -808,7 +825,6 @@
         .form-group {
           width: 100%;
           input {
-            float: right;
           }
         }
       }
@@ -876,9 +892,9 @@
 
 @media (min-device-width: 240px) and (max-device-width: 767px) and (orientation: landscape) {
   .sidebar-menu-wrap {
-    position: relative;
+    position: absolute;
     right: 0;
-    top: 0;
+    top: 70px;
     bottom: 0;
     width: 100%;
     -webkit-transform: rotate(0deg);
